--- a/contact.html
+++ b/contact.html
@@ -44,14 +44,14 @@
         <div>
         <i class="fa fa-phone"></i>
         <span>
-            <h5>+91 7988312588</h5>
+            <h5>+91 9694620296</h5>
             <p>Monday to Friday, 10AM to 4PM</p>
         </span>
     </div>
 <div>
     <i class="fa fa-envelope"></i>
         <span>
-            <h5>2237436.it.cec@cgc.edu.in</h5>
+            <h5>2237872.aids.cec@cgc.edu.in</h5>
             <p>Email us for your query</p>
         </span>
     </div></div>
